tests/NormalTests/paczka1/fuzzy1/37220033.err
Error in line 2: tfBSM6j A720 37,8
Error in line 4: 7lVJhdxGs3D A49 86,1
Error in line 16: tfBSM6j A720 237,86
Error in line 13: 7lVJhdxGs3D S909 34,2
Error in line 19: S909 A894 77,7
Error in line 27: tfBSM6j A720 112,6
